// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Articles A11y I can see the skip to content link 1`] = `"Skip to content"`;

exports[`Canonical Articles Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598286&amp;s2=64&amp;p=news.articles.c0g992jmmkko.page&amp;x2=[responsive]&amp;x3=[news]&amp;x4=[en-gb]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Royal%2Bwedding%2Bflowers%2Bgiven%2Bto%2BHackney%2Bhospice]&amp;x11=[2019-05-28T13%3A38%3A19.412Z]&amp;x12=[2019-05-28T13%3A38%3A19.412Z]&amp;x13=[Wedding%2Bof%2BPrince%2BHarry%2Band%2BMeghan%2BMarkle~Duchess%2Bof%2BSussex~Hackney~Windsor]&amp;x14=[2351f2b2-ce36-4f44-996d-c3c4f7f90eaa~803eaeb9-c0c3-4f1b-9a66-90efac3df2dc~dba7dfeb-87d3-4801-80ba-fa8be6c9555e~f94940f0-476c-4ec7-b48d-e58120bb1956]\\"/>"`;

exports[`Canonical Articles Footer Anchors should match text and url 1`] = `
Object {
  "text": "BBC News",
  "url": "/news",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 2`] = `
Object {
  "text": "Why you can trust the BBC",
  "url": "https://www.bbc.com/news/help-41670342",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 3`] = `
Object {
  "text": "Terms of Use",
  "url": "https://www.bbc.com/terms",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 4`] = `
Object {
  "text": "About the BBC",
  "url": "https://www.bbc.co.uk/aboutthebbc/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 5`] = `
Object {
  "text": "Privacy Policy",
  "url": "https://www.bbc.com/privacy/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 7`] = `
Object {
  "text": "Accessibility Help",
  "url": "https://www.bbc.com/accessibility/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 8`] = `
Object {
  "text": "Contact the BBC",
  "url": "https://www.bbc.com/contact/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 9`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-does-the-bbc-use-cookies-for-advertising/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 10`] = `
Object {
  "text": "Read about our approach to external linking.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical Articles Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/news"`;

exports[`Canonical Articles Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. The BBC is not responsible for the content of external sites. Read about our approach to external linking."`;

exports[`Canonical Articles Header I can see the branding 1`] = `"BBC News"`;

exports[`Canonical Articles Header Navigation link should match text and url 1`] = `
Object {
  "text": "Home",
  "url": "/news",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 2`] = `
Object {
  "text": "UK",
  "url": "/news/uk",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 3`] = `
Object {
  "text": "World",
  "url": "/news/world",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 4`] = `
Object {
  "text": "Business",
  "url": "/news/business",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 5`] = `
Object {
  "text": "Politics",
  "url": "/news/politics",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 6`] = `
Object {
  "text": "Tech",
  "url": "/news/technology",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 7`] = `
Object {
  "text": "Science",
  "url": "/news/science_and_environment",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 8`] = `
Object {
  "text": "Health",
  "url": "/news/health",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 9`] = `
Object {
  "text": "Family & Education",
  "url": "/news/education",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 10`] = `
Object {
  "text": "Entertainment & Arts",
  "url": "/news/entertainment_and_arts",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 11`] = `
Object {
  "text": "Stories",
  "url": "/news/stories",
}
`;

exports[`Canonical Articles Image Caption should match text 1`] = `"Image caption, Former embroider Pauline Clayton described the gift as \\"lovely\\""`;

exports[`Canonical Articles Image should match snapshot 1`] = `null`;

exports[`Canonical Articles Main heading should match text 1`] = `"Internal server error"`;

exports[`Canonical Articles SEO Canonical link 1`] = `"http://localhost:7080/news/articles/c0g992jmmkko"`;

exports[`Canonical Articles SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Articles SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Articles SEO Heading level 1 1`] = `"Internal server error"`;

exports[`Canonical Articles SEO Lang attribute 1`] = `"en-GB"`;

exports[`Canonical Articles SEO OG description 1`] = `"Royal wedding flowers given to Hackney hospice"`;

exports[`Canonical Articles SEO OG image 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png"`;

exports[`Canonical Articles SEO OG image alt 1`] = `"BBC News"`;

exports[`Canonical Articles SEO OG locale 1`] = `"en_GB"`;

exports[`Canonical Articles SEO OG site name 1`] = `"BBC News"`;

exports[`Canonical Articles SEO OG title 1`] = `"Royal wedding flowers given to Hackney hospice - BBC News"`;

exports[`Canonical Articles SEO OG type 1`] = `"article"`;

exports[`Canonical Articles SEO OG url 1`] = `"http://localhost:7080/news/articles/c0g992jmmkko"`;

exports[`Canonical Articles SEO Page title 1`] = `"Internal server error - BBC News"`;

exports[`Canonical Articles SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`Canonical Articles SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Articles SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`Canonical Articles SEO Twitter description 1`] = `"Internal server error"`;

exports[`Canonical Articles SEO Twitter image alt 1`] = `"BBC News"`;

exports[`Canonical Articles SEO Twitter image src 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png"`;

exports[`Canonical Articles SEO Twitter site 1`] = `"@BBCNews"`;

exports[`Canonical Articles SEO Twitter title 1`] = `"Internal server error - BBC News"`;
